# commonsence_inference

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  model.py  test_bert.py  test_bert_legacy.py  test_mlp.py  train_bert.py  train_mlp.py
