[tool.poetry]
name = "pairpro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
pandas = "^1.2.4"
gensim = "^4.0.1"
python-Levenshtein = "^0.12.2"
mecab-python3 = "^1.0.3"
tqdm = "^4.60.0"
transformers = "^4.6.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
